--- a/camera_raw_chapter_1.ipynb
+++ b/camera_raw_chapter_1.ipynb
@@ -31,7 +31,17 @@
       },
       "cell_type": "markdown",
       "source": [
-        "#Pythonで作る - RAW現像ソフトウェア作成入門"
+        "# Pythonで作る - RAW現像ソフトウェア作成入門"
+      ]
+    },
+    {
+      "metadata": {
+        "id": "fHOf-3ifawuQ",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "# カメラ画像処理とRAW現像ソフトウェアについて"
       ]
     },
     {
@@ -41,7 +51,17 @@
       },
       "cell_type": "markdown",
       "source": [
-        "# はじめに"
+        "  ## この章について"
+      ]
+    },
+    {
+      "metadata": {
+        "id": "fAAldEyCbA4x",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "この章ではRAW画像、RAWファイルとはなにかからはじめて、カメラ画像処理やRAW現像ソフトの中でどのような処理が行われているのかを説明します。"
       ]
     },
     {
@@ -69,7 +89,7 @@
         "\n",
         "これに対して、画像センサー上の一つ一つの光センサーの上に、一部の波長の光だけを通す色フィルターを載せ、各画素が異なる色を取り込むという方法もあります。この方法では１枚の画像センサーでフルカラー画像を取り込めるため、３板方式に対して単板方式とよばれることもあります。３版方式とくらべた利点としては分光器が不要で１枚のセンサーで済むのでサイズが小さい。逆に欠点としては、１画素につき１色の情報しか無いので、フルカラーの画像を再現するには画像処理が必要になる、という点があります。\n",
         "\n",
-        "単版方式の画像センサーの上に載る色フィルターの種類としては、３原色を通す原色フィルターと、３原色の補色（シアン・マゼンダ・イエロー）を通す補色フィルター1というものがあります。補色フィルターは光の透過率が高いためより明るい画像を得ることができます。それに対して原色フィルターは色の再現度にすぐれています。Bayer配列はこの単版原色フィルター方式のうち最もポピュラーなものです。\n",
+        "単版方式の画像センサーの上に載る色フィルターの種類としては、３原色を通す原色フィルターと、３原色の補色（シアン・マゼンダ・イエロー）を通す補色フィルター<sup name=\"footnote1\">[1]</sup>というものがあります。補色フィルターは光の透過率が高いためより明るい画像を得ることができます。それに対して原色フィルターは色の再現度にすぐれています。Bayer配列はこの単版原色フィルター方式のうち最もポピュラーなものです。\n",
         "\n",
         "こういうわけでBayer配列の画像センサーの出力では１画素につき一色しか情報をもちません。Bayer配列のカラーフィルターはこの図左のように、2x2ブロックの中に、赤が1画素、青が1画素、緑が2画素ならぶようになっています。緑は対角線上にならびます。緑が2画素あるのは、可視光の中でも最も強い光の緑色を使うことで解像度を稼ぐため、という解釈がなされています。Bayerというのはこの配列の発明者の名前です。\n",
         "\n"
@@ -118,55 +138,116 @@
     },
     {
       "metadata": {
-        "id": "45q-TEMQPvPl",
-        "colab_type": "code",
-        "colab": {}
+        "id": "VqN6jGJoXHFF",
+        "colab_type": "text"
       },
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
+        "### カメラ画像処理のあらまし"
+      ]
     },
     {
       "metadata": {
-        "id": "tz9e62L-KpqI",
-        "colab_type": "code",
-        "colab": {}
+        "id": "Z4X5MI9tXWGN",
+        "colab_type": "text"
       },
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
+        "Bayerからフルカラーの画像を作り出すカメラ画像処理のうち、メインになる部分の例はこんな感じになります<sup nane=\"footnote2\">[2]</sup>"
+      ]
     },
     {
       "metadata": {
-        "id": "E40x0-SDMh54",
-        "colab_type": "code",
-        "colab": {}
+        "id": "FWNOX2oaXagW",
+        "colab_type": "text"
       },
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
+        "<div align=\"center\">\n",
+        "  <img src=\"https://github.com/moizumi99/camera_raw_processing/raw/master/fig2.png\" \"カメラ画像処理パイプライン\">\n",
+        "</div>"
+      ]
     },
     {
       "metadata": {
-        "id": "Efx-X3mOMvfY",
-        "colab_type": "code",
-        "colab": {}
+        "id": "iuagwvuBYBMc",
+        "colab_type": "text"
       },
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
+        "このうち、最低限必要な処理は、以下のものです。\n",
+        "\n",
+        "* ブラックレベル補正\n",
+        "* ホワイトバランス補正（デジタルゲイン補正も含む）\n",
+        "* デモザイク（Bayerからフルカラー画像への変換）\n",
+        "* ガンマ補正\n",
+        "\n",
+        "これらがないと、まともに見ることのできる画像を作ることができません。\n",
+        "\n",
+        "さらに、最低限の画質を維持するには、通常は、\n",
+        "\n",
+        "* 線形性補正\n",
+        "* 欠陥画素補正\n",
+        "* 周辺減光補正\n",
+        "* カラーマトリクス\n",
+        "\n",
+        "が必要です。ただし、線形性補正や欠陥画素補正は、カメラがRAWデータを出力する前に処理されていることが多いようです。また、センサーの特性がよければ線形性補正やカラーマトリクスの影響は小さいかもしれません。\n",
+        "\n",
+        "次に、より良い画質を実現するものとして、\n",
+        "\n",
+        "* ノイズ除去\n",
+        "* エッジ強調・テクスチャ補正\n",
+        "\n",
+        "があります。RGB->YUV変換はJPEGやMPEGの画像を作るのには必要ですが、RGB画像を出力する分にはなくてもかまいません。\n",
+        "\n",
+        "この他に、最近のカメラでは更に画質を向上させるために\n",
+        "\n",
+        "* レンズ収差補正\n",
+        "* レンズ歪補正\n",
+        "* 偽色補正\n",
+        "* グローバル・トーン補正\n",
+        "* ローカル・トーン補正\n",
+        "* 高度なノイズ処理\n",
+        "* 高度な色補正\n",
+        "* ズーム\n",
+        "* マルチフレーム処理\n",
+        "\n",
+        "などの処理が行われるのが普通です。今回はベーシックな処理のみとりあげるので、こういった高度な処理は行いません。"
+      ]
+    },
+    {
+      "metadata": {
+        "id": "yGYayQIAYJn8",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "結局、今回扱うのは次の部分のみです。"
+      ]
+    },
+    {
+      "metadata": {
+        "id": "Tps7a76cYNLN",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "<div align=\"center\">\n",
+        "  <img src=\"https://github.com/moizumi99/camera_raw_processing/raw/master/fig3.png\" \"単純化したカメラ画像処理パイプライン\">\n",
+        "</div>"
+      ]
+    },
+    {
+      "metadata": {
+        "id": "SYJpjLlg_E8E",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "<b name=\"footnote1\">1</b>: 実際にはこの他に緑色の画素もあり、2x2の４画素のパターンになっているのが普通\n",
+        "\n",
+        "<b name=\"footnote2\">2</b>: これはあくまで一例です。実際のカメラやRAW現像ソフト内で行われる処理はメーカーや機種ごとに異なります。"
+      ]
     }
   ]
 }
