--- a/camera_raw_chapter_1.ipynb
+++ b/camera_raw_chapter_1.ipynb
@@ -41,7 +41,7 @@
       },
       "cell_type": "markdown",
       "source": [
-        "# カメラ画像処理とRAW現像ソフトウェアについて"
+        "## カメラ画像処理とRAW現像ソフトウェアについて"
       ]
     },
     {
@@ -51,7 +51,7 @@
       },
       "cell_type": "markdown",
       "source": [
-        "  ## この章について"
+        "### この章について"
       ]
     },
     {
@@ -89,7 +89,9 @@
         "\n",
         "これに対して、画像センサー上の一つ一つの光センサーの上に、一部の波長の光だけを通す色フィルターを載せ、各画素が異なる色を取り込むという方法もあります。この方法では１枚の画像センサーでフルカラー画像を取り込めるため、３板方式に対して単板方式とよばれることもあります。３版方式とくらべた利点としては分光器が不要で１枚のセンサーで済むのでサイズが小さい。逆に欠点としては、１画素につき１色の情報しか無いので、フルカラーの画像を再現するには画像処理が必要になる、という点があります。\n",
         "\n",
-        "単版方式の画像センサーの上に載る色フィルターの種類としては、３原色を通す原色フィルターと、３原色の補色（シアン・マゼンダ・イエロー）を通す補色フィルター<sup name=\"footnote1\">[1]</sup>というものがあります。補色フィルターは光の透過率が高いためより明るい画像を得ることができます。それに対して原色フィルターは色の再現度にすぐれています。Bayer配列はこの単版原色フィルター方式のうち最もポピュラーなものです。\n",
+        "単版方式の画像センサーの上に載る色フィルターの種類としては、３原色を通す原色フィルターと、３原色の補色（シアン・マゼンダ・イエロー）を通す補色フィルター[^1]というものがあります。補色フィルターは光の透過率が高いためより明るい画像を得ることができます。それに対して原色フィルターは色の再現度にすぐれています。Bayer配列はこの単版原色フィルター方式のうち最もポピュラーなものです。\n",
+        "\n",
+        "[^1]: 実際にはこの他に緑色の画素もあり、2x2の４画素のパターンになっているのが普通\n",
         "\n",
         "こういうわけでBayer配列の画像センサーの出力では１画素につき一色しか情報をもちません。Bayer配列のカラーフィルターはこの図左のように、2x2ブロックの中に、赤が1画素、青が1画素、緑が2画素ならぶようになっています。緑は対角線上にならびます。緑が2画素あるのは、可視光の中でも最も強い光の緑色を使うことで解像度を稼ぐため、という解釈がなされています。Bayerというのはこの配列の発明者の名前です。\n",
         "\n"
@@ -102,9 +104,7 @@
       },
       "cell_type": "markdown",
       "source": [
-        "<div align=\"center\">\n",
-        "<img src=\"https://github.com/moizumi99/camera_raw_processing/raw/master/fig1.png\" \"BayerとRGB配列\">\n",
-        "</div>"
+        "![BayerとRGB配列](fig1.png \"BayerとRGB配列\")"
       ]
     },
     {
@@ -153,7 +153,9 @@
       },
       "cell_type": "markdown",
       "source": [
-        "Bayerからフルカラーの画像を作り出すカメラ画像処理のうち、メインになる部分の例はこんな感じになります<sup nane=\"footnote2\">[2]</sup>"
+        "Bayerからフルカラーの画像を作り出すカメラ画像処理のうち、メインになる部分の例はこんな感じになります。[^2]\n",
+        "\n",
+        "[^2]: これはあくまで一例です。実際のカメラやRAW現像ソフト内で行われる処理はメーカーや機種ごとに異なります。"
       ]
     },
     {
@@ -163,9 +165,7 @@
       },
       "cell_type": "markdown",
       "source": [
-        "<div align=\"center\">\n",
-        "  <img src=\"https://github.com/moizumi99/camera_raw_processing/raw/master/fig2.png\" \"カメラ画像処理パイプライン\">\n",
-        "</div>"
+        "![カメラ画像処理パイプライン](https://github.com/moizumi99/camera_raw_processing/blob/master/fig2.png?raw=1 \"カメラ画像処理パイプライン\")"
       ]
     },
     {
@@ -232,22 +232,21 @@
       },
       "cell_type": "markdown",
       "source": [
-        "<div align=\"center\">\n",
-        "  <img src=\"https://github.com/moizumi99/camera_raw_processing/raw/master/fig3.png\" \"単純化したカメラ画像処理パイプライン\">\n",
-        "</div>"
+        "![単純化したカメラ画像処理パイプライン](https://github.com/moizumi99/camera_raw_processing/blob/master/fig3.png?raw=1 \"単純化したカメラ画像処理パイプライン\")\n"
       ]
     },
     {
       "metadata": {
-        "id": "SYJpjLlg_E8E",
-        "colab_type": "text"
+        "id": "8feK-xcokub2",
+        "colab_type": "code",
+        "colab": {}
       },
-      "cell_type": "markdown",
+      "cell_type": "code",
       "source": [
-        "<b name=\"footnote1\">1</b>: 実際にはこの他に緑色の画素もあり、2x2の４画素のパターンになっているのが普通\n",
-        "\n",
-        "<b name=\"footnote2\">2</b>: これはあくまで一例です。実際のカメラやRAW現像ソフト内で行われる処理はメーカーや機種ごとに異なります。"
-      ]
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
