--- a/camera_raw_chapter_1.ipynb
+++ b/camera_raw_chapter_1.ipynb
@@ -6,6 +6,7 @@
       "name": "camera_raw_chapter_1.ipynb",
       "version": "0.3.2",
       "provenance": [],
+      "collapsed_sections": [],
       "include_colab_link": true
     },
     "kernelspec": {
@@ -104,7 +105,7 @@
       },
       "cell_type": "markdown",
       "source": [
-        "![BayerとRGB配列](fig1.png \"BayerとRGB配列\")"
+        "![BayerとRGB配列](https://github.com/moizumi99/camera_raw_processing/raw/master/fig1.png \"BayerとRGB配列\")"
       ]
     },
     {
@@ -165,7 +166,7 @@
       },
       "cell_type": "markdown",
       "source": [
-        "![カメラ画像処理パイプライン](https://github.com/moizumi99/camera_raw_processing/blob/master/fig2.png?raw=1 \"カメラ画像処理パイプライン\")"
+        "![カメラ画像処理パイプライン](https://github.com/moizumi99/camera_raw_processing/raw/master/fig2.png \"カメラ画像処理パイプライン\")"
       ]
     },
     {
@@ -232,7 +233,7 @@
       },
       "cell_type": "markdown",
       "source": [
-        "![単純化したカメラ画像処理パイプライン](https://github.com/moizumi99/camera_raw_processing/blob/master/fig3.png?raw=1 \"単純化したカメラ画像処理パイプライン\")\n"
+        "![単純化したカメラ画像処理パイプライン](https://github.com/moizumi99/camera_raw_processing/raw/master/fig3.png \"単純化したカメラ画像処理パイプライン\")\n"
       ]
     }
   ]
