対象読者、ついか。他に細かい修正。

--- a/camera_raw_chapter_0.ipynb
+++ b/camera_raw_chapter_0.ipynb
@@ -3,7 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "camera_raw_chapter_0.ipynb",
+      "name": "Copy of camera_raw_chapter_0.ipynb",
       "version": "0.3.2",
       "provenance": [],
       "collapsed_sections": [],
@@ -23,16 +23,6 @@
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/moizumi99/camera_raw_processing/blob/master/camera_raw_chapter_0.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "metadata": {
-        "id": "Te523tLPCKsK",
-        "colab_type": "text"
-      },
-      "cell_type": "markdown",
-      "source": [
-        "# PythonとColabで作る - カメラ画像処理ソフトウェア作成入門"
       ]
     },
     {
@@ -83,6 +73,31 @@
     },
     {
       "metadata": {
+        "id": "bPQ_7Q6Qjwsb",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "## 対象読者"
+      ]
+    },
+    {
+      "metadata": {
+        "id": "pBcHCaK2j0ui",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "この本は以下のような読者を対象としています。\n",
+        "- カメラ内部の画像処理またはRAW現像の内容に興味がある。\n",
+        "\n",
+        "また次のような知識があれば、内容を深く理解する助けになります。\n",
+        "- Pythonプログラミングの基本的な内容について知っている。\n",
+        "- 高校で学ぶ程度の数学の知識がある。"
+      ]
+    },
+    {
+      "metadata": {
         "id": "vZDxW244EBjH",
         "colab_type": "text"
       },
@@ -98,8 +113,11 @@
       },
       "cell_type": "markdown",
       "source": [
+        "Google Colab (グーグル・コラボ)とはGoogleが提供するサービスの一つで、ブラウザ上で実行可能なPythonのインタラクティブ環境です。\n",
         "\n",
-        "(TODO: Colabの解説)"
+        "Google Colabを利用することにより、Pythonの環境を無料でブラウザ上で利用することができます。\n",
+        "\n",
+        "詳しくは[Google自身によるColabの解説](https://colab.research.google.com/notebooks/welcome.ipynb?hl=ja)をご覧ください。"
       ]
     },
     {
@@ -119,9 +137,12 @@
       },
       "cell_type": "markdown",
       "source": [
+        "この本で扱う内容は基本的に以下のとおりです。\n",
         "- 基本的なRAW現像処理・カメラ画像処理の流れ\n",
         "- Bayer画像からRGB画像出力までの各アルゴリズムのうち、基本的な最低限のものの解説\n",
-        "- 解説した基本的なアルゴリズムのPythonによる実装と処理例"
+        "- 解説した基本的なアルゴリズムのPythonによる実装と処理例\n",
+        "\n",
+        "一部例外はありますが、そういったものは関連した話題として触れられるだけにとどまります。"
       ]
     },
     {
@@ -141,11 +162,12 @@
       },
       "cell_type": "markdown",
       "source": [
+        "この本で基本的に扱わない物は以下のとおりです。ただし、記事の解説上最低限必要なものについては触れることがあります。\n",
         "\n",
         "- ３A（オートフォーカス、オートホワイトバランス、オート露出）などを始めとするカメラコントロールアルゴリズム\n",
         "- 高度なカメラ画像処理アルゴリズム\n",
-        "- 画像評価、カリブレーション、及びチューニング（ただし、記事の解説上最低限必要なものを除く）\n",
-        "- 画像圧縮"
+        "- 画像評価、カリブレーション、及びチューニング\n",
+        "- 画像圧縮\n"
       ]
     },
     {
@@ -198,28 +220,16 @@
         "この内容を再現するには通常のPC環境に加えて以下の環境等が必用です。\n",
         "\n",
         "- Google Colabにアクセスできるブラウザ\n",
-        " - 多くのブラウザが対応できると思われますが、本書の内容はChromeによって確かめられています。\n",
+        " - 多くのブラウザが対応できると思われます。なお、本書の内容はChromeによって確かめられています。\n",
         "\n",
         "- ColabにアクセスできるGoogleアカウント\n",
         "\n",
-        "次の物があれば、本書の内容を更に深く理解することができます\n",
+        "必須ではありませんが、次の物があれば、本書の内容を更に深く理解することができます\n",
         "\n",
-        "- PC上で実行できるPerl\n",
+        "- PC上で実行できるPerl環境（ExifToolの実行に必用)\n",
+        "\n",
         "- [exiftool](https://www.sno.phy.queensu.ca/~phil/exiftool/)"
       ]
-    },
-    {
-      "metadata": {
-        "id": "QHAn24yvFnXe",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
     }
   ]
 }
