--- a/camera_raw_chapter_1.ipynb
+++ b/camera_raw_chapter_1.ipynb
@@ -27,22 +27,12 @@
     },
     {
       "metadata": {
-        "id": "DwLRDXPJMQ6A",
-        "colab_type": "text"
-      },
-      "cell_type": "markdown",
-      "source": [
-        "# Pythonで作る - RAW現像ソフトウェア作成入門"
-      ]
-    },
-    {
-      "metadata": {
         "id": "fHOf-3ifawuQ",
         "colab_type": "text"
       },
       "cell_type": "markdown",
       "source": [
-        "## カメラ画像処理とRAW現像ソフトウェアについて"
+        "# カメラ画像処理について"
       ]
     },
     {
@@ -52,7 +42,7 @@
       },
       "cell_type": "markdown",
       "source": [
-        "### この章について"
+        "## この章について"
       ]
     },
     {
@@ -62,7 +52,27 @@
       },
       "cell_type": "markdown",
       "source": [
-        "この章ではRAW画像、RAWファイルとはなにかからはじめて、カメラ画像処理やRAW現像ソフトの中でどのような処理が行われているのかを説明します。"
+        "この章ではカメラのしくみやRAW画像からはじめて、カメラ画像処理やRAW現像ソフトの中でどのような処理が行われているのかを説明します。"
+      ]
+    },
+    {
+      "metadata": {
+        "id": "yE5YYx8Douv_",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "## カメラのしくみ"
+      ]
+    },
+    {
+      "metadata": {
+        "id": "myKIrTiSou4-",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "(TODO: 追加)"
       ]
     },
     {
@@ -72,7 +82,7 @@
       },
       "cell_type": "markdown",
       "source": [
-        "### RAW画像、RAWファイルとは？"
+        "## RAW画像、RAWファイルとは？"
       ]
     },
     {
@@ -144,7 +154,7 @@
       },
       "cell_type": "markdown",
       "source": [
-        "### カメラ画像処理のあらまし"
+        "## カメラ画像処理のあらまし"
       ]
     },
     {
