fig2_1.png is added

--- a/camera_raw_chapter_1.ipynb
+++ b/camera_raw_chapter_1.ipynb
@@ -115,7 +115,7 @@
       },
       "cell_type": "markdown",
       "source": [
-        "![BayerとRGB配列](https://github.com/moizumi99/camera_raw_processing/raw/master/fig1.png \"BayerとRGB配列\")"
+        "![BayerとRGB配列](fig1.png \"BayerとRGB配列\")"
       ]
     },
     {
@@ -176,7 +176,7 @@
       },
       "cell_type": "markdown",
       "source": [
-        "![カメラ画像処理パイプライン](https://github.com/moizumi99/camera_raw_processing/raw/master/fig2.png \"カメラ画像処理パイプライン\")"
+        "![カメラ画像処理パイプライン](fig2.png \"カメラ画像処理パイプライン\")"
       ]
     },
     {
@@ -243,7 +243,7 @@
       },
       "cell_type": "markdown",
       "source": [
-        "![単純化したカメラ画像処理パイプライン](https://github.com/moizumi99/camera_raw_processing/raw/master/fig3.png \"単純化したカメラ画像処理パイプライン\")\n"
+        "![単純化したカメラ画像処理パイプライン](fig3.png \"単純化したカメラ画像処理パイプライン\")\n"
       ]
     }
   ]
