Figure 2_1 size changed.

--- a/camera_raw_chapter_2.ipynb
+++ b/camera_raw_chapter_2.ipynb
@@ -81,7 +81,7 @@
       },
       "cell_type": "markdown",
       "source": [
-        "  ![最終的な画像](https://github.com/moizumi99/camera_raw_processing/raw/master/fig2_1.png =640x \"最終的な画像\")"
+        "  ![最終的な画像](https://github.com/moizumi99/camera_raw_processing/raw/master/fig2_1.png \"最終的な画像\")"
       ]
     },
     {
