--- a/camera_raw_chapter_1.ipynb
+++ b/camera_raw_chapter_1.ipynb
@@ -27,223 +27,208 @@
     },
     {
       "metadata": {
-        "id": "fHOf-3ifawuQ",
+        "id": "rovw28IICMap",
         "colab_type": "text"
       },
       "cell_type": "markdown",
       "source": [
-        "# カメラ画像処理について"
+        "# 1. はじめに"
       ]
     },
     {
       "metadata": {
-        "id": "GHjuq3o4Mit5",
+        "id": "VtAuZqBOCVwc",
         "colab_type": "text"
       },
       "cell_type": "markdown",
       "source": [
-        "## この章について"
+        "## この本について"
       ]
     },
     {
       "metadata": {
-        "id": "fAAldEyCbA4x",
+        "id": "uLDnQ8fjCbYB",
         "colab_type": "text"
       },
       "cell_type": "markdown",
       "source": [
-        "この章ではカメラのしくみやRAW画像からはじめて、カメラ画像処理やRAW現像ソフトの中でどのような処理が行われているのかを説明します。"
+        "この本では、カメラ画像処理・RAW画像現像の内容を実際の動作レベルで解説し、なるべくスクラッチからPython上で実行してみる事を目的としています。\n",
+        "\n",
+        "そのために、解説する処理は最重要なものにしぼり、使用するアルゴリズムは一部の例外（デモザイク）を除き、もっとも簡単なものを選びました<sup name=\"footnote1\">[1]</sup>。\n",
+        "\n",
+        "またすべての処理はGoogle Colab上で行うことができ、読者の皆さんはパワフルなPCや特殊なソフトウェアをよういせずとも、ブラウザ上で全ての処理を試してみることができます。\n",
+        "  \n",
+        "記事の最後ではラズベリーパイのカメラで撮影したRAW画像からこんなRGB画像が作れるようになります。"
       ]
     },
     {
       "metadata": {
-        "id": "yE5YYx8Douv_",
+        "id": "XCSHEbH9DWKw",
         "colab_type": "text"
       },
       "cell_type": "markdown",
       "source": [
-        "## カメラのしくみ"
+        "(TODO: 画像を入れる)"
       ]
     },
     {
       "metadata": {
-        "id": "myKIrTiSou4-",
+        "id": "bPQ_7Q6Qjwsb",
         "colab_type": "text"
       },
       "cell_type": "markdown",
       "source": [
-        "(TODO: 追加)"
+        "## 対象読者"
       ]
     },
     {
       "metadata": {
-        "id": "DE1j3hTLL46c",
+        "id": "pBcHCaK2j0ui",
         "colab_type": "text"
       },
       "cell_type": "markdown",
       "source": [
-        "## RAW画像、RAWファイルとは？"
+        "この本は以下のような読者を対象としています。\n",
+        "- カメラ内部の画像処理またはRAW現像の内容に興味がある。\n",
+        "\n",
+        "また次のような知識があれば、内容を深く理解する助けになります。\n",
+        "- Pythonプログラミングの基本的な内容について知っている。\n",
+        "- 高校で学ぶ程度の数学の知識がある。"
       ]
     },
     {
       "metadata": {
-        "id": "mgClTMIQMv9g",
+        "id": "vZDxW244EBjH",
         "colab_type": "text"
       },
       "cell_type": "markdown",
       "source": [
-        "RAWファイルやRAWデータというのは厳密な定義はないのですが、カメラ処理でRAWというとBayerフォーマットの画像データを指すことが多いようです。したがって多くの場合、RAWデータはBayerフォーマットの画像データ、RAWファイルはそのRAWデータを含んだファイルということになります。\n",
+        "## Colabについて\n"
+      ]
+    },
+    {
+      "metadata": {
+        "id": "Aur6izfqGBZ-",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "Google Colab (グーグル・コラボ)とはGoogleが提供するサービスの一つで、ブラウザ上で実行可能なPythonのインタラクティブ環境です。\n",
         "\n",
-        "まず前提として、今使われているカメラの画像センサーの殆どはBayer配列というものを使ってフルカラーを実現しています。\n",
+        "Google Colabを利用することにより、Pythonの環境を無料でブラウザ上で利用することができます。\n",
         "\n",
-        "画像センサーは、碁盤の目状にならんだ小さな光センサーの集まりでできています。一つ一つの光センサーはそのままでは色の違いを認識できません。そこで色を認識するためには、3原色のうち一色を選択して光センサーにあてて、その光の強度を測定する必要があります。 方法としてはまず、分光器を使って光を赤、青、緑に分解して、３つの画像センサーにあてて、それぞれの色の画像を認識し、その後その３枚をあわせることでフルカラーの画像を合成するという方法がありました。これは３板方式などとよばれることがあります。この方法は手法的にもわかりやすく、また、余計な処理が含まれないためフルカラーの画像がきれい、といった特徴があり高級ビデオカメラなどで採用されていました。欠点としては分光器と３つの画像センサーを搭載するためにサイズが大きくなるという点があります。\n",
+        "詳しくは[Google自身によるColabの解説](https://colab.research.google.com/notebooks/welcome.ipynb?hl=ja)をご覧ください。"
+      ]
+    },
+    {
+      "metadata": {
+        "id": "oDzKvsuXEFiv",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "## この本で扱うもの\n"
+      ]
+    },
+    {
+      "metadata": {
+        "id": "_WG7PppYFzHV",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "この本で扱う内容は基本的に以下のとおりです。\n",
+        "- 基本的なRAW現像処理・カメラ画像処理の流れ\n",
+        "- Bayer画像からRGB画像出力までの各アルゴリズムのうち、基本的な最低限のものの解説\n",
+        "- 解説した基本的なアルゴリズムのPythonによる実装と処理例\n",
         "\n",
-        "これに対して、画像センサー上の一つ一つの光センサーの上に、一部の波長の光だけを通す色フィルターを載せ、各画素が異なる色を取り込むという方法もあります。この方法では１枚の画像センサーでフルカラー画像を取り込めるため、３板方式に対して単板方式とよばれることもあります。３版方式とくらべた利点としては分光器が不要で１枚のセンサーで済むのでサイズが小さい。逆に欠点としては、１画素につき１色の情報しか無いので、フルカラーの画像を再現するには画像処理が必要になる、という点があります。\n",
+        "一部例外はありますが、そういったものは関連した話題として触れられるだけにとどまります。"
+      ]
+    },
+    {
+      "metadata": {
+        "id": "GxTPnXflEN2u",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "## この記事で扱わないもの\n"
+      ]
+    },
+    {
+      "metadata": {
+        "id": "AFVXdBUrF6M2",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "この本で基本的に扱わない物は以下のとおりです。ただし、記事の解説上最低限必要なものについては触れることがあります。\n",
         "\n",
-        "単版方式の画像センサーの上に載る色フィルターの種類としては、３原色を通す原色フィルターと、３原色の補色（シアン・マゼンダ・イエロー）を通す補色フィルター[^1]というものがあります。補色フィルターは光の透過率が高いためより明るい画像を得ることができます。それに対して原色フィルターは色の再現度にすぐれています。Bayer配列はこの単版原色フィルター方式のうち最もポピュラーなものです。\n",
+        "- ３A（オートフォーカス、オートホワイトバランス、オート露出）などを始めとするカメラコントロールアルゴリズム\n",
+        "- 高度なカメラ画像処理アルゴリズム\n",
+        "- 画像評価、カリブレーション、及びチューニング\n",
+        "- 画像圧縮\n"
+      ]
+    },
+    {
+      "metadata": {
+        "id": "rHby_HVMEQ5x",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "## 環境について\n",
         "\n",
-        "[^1]: 実際にはこの他に緑色の画素もあり、2x2の４画素のパターンになっているのが普通\n",
-        "\n",
-        "こういうわけでBayer配列の画像センサーの出力では１画素につき一色しか情報をもちません。Bayer配列のカラーフィルターはこの図左のように、2x2ブロックの中に、赤が1画素、青が1画素、緑が2画素ならぶようになっています。緑は対角線上にならびます。緑が2画素あるのは、可視光の中でも最も強い光の緑色を使うことで解像度を稼ぐため、という解釈がなされています。Bayerというのはこの配列の発明者の名前です。\n",
+        "この記事で解説する内容は一般的なものですが、使用した画像ファイルは特定のカメラに依存しています。\n",
+        "他のカメラでもわずかな変更で同等の処理ができるとは予想されますが、検証はしていません。"
+      ]
+    },
+    {
+      "metadata": {
+        "id": "FR2x7uaIEY_I",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "### 使用カメラ\n",
         "\n"
       ]
     },
     {
       "metadata": {
-        "id": "YhiKOBM5Pv49",
+        "id": "6pzXj7k3F97X",
         "colab_type": "text"
       },
       "cell_type": "markdown",
       "source": [
-        "![BayerとRGB配列](fig1.png \"BayerとRGB配列\")"
+        "\n",
+        "- Sony Alpha 7 III\n",
+        "- Raspberry Pi Camera v2.1\n",
+        "\n",
+        "なお、使用したファイルはGithubからダウンロードできるので、これらのカメラをお持ちでなくても、紹介した処理の内容を実行することは可能です。"
       ]
     },
     {
       "metadata": {
-        "id": "mI9vlDdyQgju",
+        "id": "8_NEJxPyEadj",
         "colab_type": "text"
       },
       "cell_type": "markdown",
       "source": [
-        "カメラ用センサーでは2000年代初頭までは、補色フィルターや３板方式もそれなりの割合で使われていたのですが、センサーの性能向上やカメラの小型化と高画質化の流れの中でほとんどがBayer方式にかわりました。今では、SigmaのFoveonのような意欲的な例外を除くと、DSLRやスマートフォンで使われているカラー画像センサーの殆どがBayer方式を採用しています。したがって、ほとんどのカメラの中ではBayerフォーマットの画像データをセンサーから受取り、フルカラーの画像に変換するという処理が行われている、ということになります。\n",
+        "### 実行環境\n",
         "\n",
-        "こういったBayerフォーマットの画像ファイルは、すなわちセンサーの出力に近いところで出力されたことになり、カメラが処理したJPEGに比べて以下のような利点があります。\n",
+        "この内容を再現するには通常のPC環境に加えて以下の環境等が必用です。\n",
         "\n",
-        "* ビット数が多い（RGBは通常８ビット。Bayerは10ビットから12ビットが普通。さらに多いものもある）\n",
-        "* 信号が線形（ガンマ補正などがされていない）\n",
-        "* 余計な画像処理がされていない\n",
-        "* 非可逆圧縮がかけられていない（情報のロスがない）\n",
+        "- Google Colabにアクセスできるブラウザ\n",
+        " - 多くのブラウザが対応できると思われます。なお、本書の内容はChromeによって確かめられています。\n",
         "\n",
-        "したがって、優秀なソフトウェアを使うことで、カメラが出力するJPEGよりもすぐれた画像を手に入れる事ができる「可能性」があります。\n",
+        "- ColabにアクセスできるGoogleアカウント\n",
         "\n",
-        "逆に欠点としては\n",
+        "必須ではありませんが、次の物があれば、本書の内容を更に深く理解することができます\n",
         "\n",
-        "* データ量が多い（ビット数が多い。通常非可逆圧縮がされていない）\n",
-        "* 手を加えないと画像が見れない\n",
-        "* 画像フォーマットの情報があまりシェアされていない\n",
-        "* 実際にはどんな処理がすでに行われているのか不透明\n",
+        "- PC上で実行できるPerl環境（ExifToolの実行に必用)\n",
         "\n",
-        "などがあります。最後の点に関して言うと、RAWデータといってもセンサー出力をそのままファイルに書き出すことはまずなく、欠陥画素除去など最低限の前処理が行われいるのが普通です。\n",
-        "しかし、実際にどんな前処理がおこなわれているのかは必ずしも公開されていません。"
-      ]
-    },
-    {
-      "metadata": {
-        "id": "VqN6jGJoXHFF",
-        "colab_type": "text"
-      },
-      "cell_type": "markdown",
-      "source": [
-        "## カメラ画像処理のあらまし"
-      ]
-    },
-    {
-      "metadata": {
-        "id": "Z4X5MI9tXWGN",
-        "colab_type": "text"
-      },
-      "cell_type": "markdown",
-      "source": [
-        "Bayerからフルカラーの画像を作り出すカメラ画像処理のうち、メインになる部分の例はこんな感じになります。[^2]\n",
-        "\n",
-        "[^2]: これはあくまで一例です。実際のカメラやRAW現像ソフト内で行われる処理はメーカーや機種ごとに異なります。"
-      ]
-    },
-    {
-      "metadata": {
-        "id": "FWNOX2oaXagW",
-        "colab_type": "text"
-      },
-      "cell_type": "markdown",
-      "source": [
-        "![カメラ画像処理パイプライン](fig2.png \"カメラ画像処理パイプライン\")"
-      ]
-    },
-    {
-      "metadata": {
-        "id": "iuagwvuBYBMc",
-        "colab_type": "text"
-      },
-      "cell_type": "markdown",
-      "source": [
-        "このうち、最低限必要な処理は、以下のものです。\n",
-        "\n",
-        "* ブラックレベル補正\n",
-        "* ホワイトバランス補正（デジタルゲイン補正も含む）\n",
-        "* デモザイク（Bayerからフルカラー画像への変換）\n",
-        "* ガンマ補正\n",
-        "\n",
-        "これらがないと、まともに見ることのできる画像を作ることができません。\n",
-        "\n",
-        "さらに、最低限の画質を維持するには、通常は、\n",
-        "\n",
-        "* 線形性補正\n",
-        "* 欠陥画素補正\n",
-        "* 周辺減光補正\n",
-        "* カラーマトリクス\n",
-        "\n",
-        "が必要です。ただし、線形性補正や欠陥画素補正は、カメラがRAWデータを出力する前に処理されていることが多いようです。また、センサーの特性がよければ線形性補正やカラーマトリクスの影響は小さいかもしれません。\n",
-        "\n",
-        "次に、より良い画質を実現するものとして、\n",
-        "\n",
-        "* ノイズ除去\n",
-        "* エッジ強調・テクスチャ補正\n",
-        "\n",
-        "があります。RGB->YUV変換はJPEGやMPEGの画像を作るのには必要ですが、RGB画像を出力する分にはなくてもかまいません。\n",
-        "\n",
-        "この他に、最近のカメラでは更に画質を向上させるために\n",
-        "\n",
-        "* レンズ収差補正\n",
-        "* レンズ歪補正\n",
-        "* 偽色補正\n",
-        "* グローバル・トーン補正\n",
-        "* ローカル・トーン補正\n",
-        "* 高度なノイズ処理\n",
-        "* 高度な色補正\n",
-        "* ズーム\n",
-        "* マルチフレーム処理\n",
-        "\n",
-        "などの処理が行われるのが普通です。今回はベーシックな処理のみとりあげるので、こういった高度な処理は行いません。"
-      ]
-    },
-    {
-      "metadata": {
-        "id": "yGYayQIAYJn8",
-        "colab_type": "text"
-      },
-      "cell_type": "markdown",
-      "source": [
-        "結局、今回扱うのは次の部分のみです。"
-      ]
-    },
-    {
-      "metadata": {
-        "id": "Tps7a76cYNLN",
-        "colab_type": "text"
-      },
-      "cell_type": "markdown",
-      "source": [
-        "![単純化したカメラ画像処理パイプライン](fig3.png \"単純化したカメラ画像処理パイプライン\")\n"
+        "- [exiftool](https://www.sno.phy.queensu.ca/~phil/exiftool/)"
       ]
     }
   ]
