chapter_3_5 is added.

--- a/camera_raw_chapter_3_2.ipynb
+++ b/camera_raw_chapter_3_2.ipynb
@@ -38,8 +38,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -48,16 +50,16 @@
       "Requirement already satisfied: rawpy in /home/moiz/anaconda3/lib/python3.7/site-packages (0.13.0)\n",
       "Requirement already satisfied: numpy in /home/moiz/anaconda3/lib/python3.7/site-packages (from rawpy) (1.15.1)\n",
       "Requirement already satisfied: imageio in /home/moiz/anaconda3/lib/python3.7/site-packages (2.4.1)\n",
-      "--2019-01-26 11:20:40--  https://raw.githubusercontent.com/moizumi99/raw_process/master/sample.ARW\n",
+      "--2019-01-26 15:56:51--  https://raw.githubusercontent.com/moizumi99/raw_process/master/sample.ARW\n",
       "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 151.101.188.133\n",
       "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|151.101.188.133|:443... connected.\n",
       "HTTP request sent, awaiting response... 200 OK\n",
       "Length: 24746752 (24M) [application/octet-stream]\n",
-      "Saving to: ‘sample.ARW.5’\n",
+      "Saving to: ‘sample.ARW.1’\n",
       "\n",
-      "sample.ARW.5        100%[===================>]  23.60M  50.7MB/s    in 0.5s    \n",
+      "sample.ARW.1        100%[===================>]  23.60M  52.3MB/s    in 0.5s    \n",
       "\n",
-      "2019-01-26 11:20:41 (50.7 MB/s) - ‘sample.ARW.5’ saved [24746752/24746752]\n",
+      "2019-01-26 15:56:51 (52.3 MB/s) - ‘sample.ARW.1’ saved [24746752/24746752]\n",
       "\n"
      ]
     }
@@ -105,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -308,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -372,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -486,20 +488,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 出力画像の準備（上記処理と同じ）\n",
-    "dms_img = np.zeros((h//2, w//2, 3))\n",
+    "def simple_demosaic(raw_array, bayer_pattern):\n",
+    "    \"\"\"\n",
+    "    簡易デモザイク処理を行う。\n",
     "\n",
-    "# raw_array[0::2, 0::2]は,偶数列、偶数業の画素。\n",
-    "# これを対応するdms_imgのチャンネルに足し合わせる\n",
-    "dms_img[:, :, bayer_pattern[0, 0]] = raw_array[0::2, 0::2]\n",
-    "dms_img[:, :, bayer_pattern[0, 1]] += raw_array[0::2, 1::2]\n",
-    "dms_img[:, :, bayer_pattern[1, 0]] += raw_array[1::2, 0::2]\n",
-    "dms_img[:, :, bayer_pattern[1, 1]] += raw_array[1::2, 1::2]\n",
-    "dms_img[:, :, 1] /= 2"
+    "    Parameters\n",
+    "    ----------\n",
+    "    raw_array: numpy array\n",
+    "        入力BayerRAW画像データ\n",
+    "    bayer_pattern: int[2, 2]\n",
+    "        ベイヤーパターン。0:赤、1:緑、2:青、3:緑。\n",
+    "\n",
+    "    Returns\n",
+    "\n",
+    "    -------\n",
+    "    dms_img: numpy array\n",
+    "        出力RGB画像。サイズは入力の縦横共に1/2。\n",
+    "    \"\"\"\n",
+    "    height, width = raw_array.shape\n",
+    "    dms_img = np.zeros((height//2, width//2, 3))\n",
+    "    bayer_pattern[bayer_pattern == 3] = 1\n",
+    "    dms_img[:, :, bayer_pattern[0, 0]] = raw_array[0::2, 0::2]\n",
+    "    dms_img[:, :, bayer_pattern[0, 1]] += raw_array[0::2, 1::2]\n",
+    "    dms_img[:, :, bayer_pattern[1, 0]] += raw_array[1::2, 0::2]\n",
+    "    dms_img[:, :, bayer_pattern[1, 1]] += raw_array[1::2, 1::2]\n",
+    "    dms_img[:, :, 1] /= 2\n",
+    "    return dms_img"
    ]
   },
   {
@@ -513,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -530,6 +548,8 @@
     }
    ],
    "source": [
+    "dms_img = simple_demosaic(raw_array, raw.raw_pattern)\n",
+    "\n",
     "# 画像を0と1の間でノーマライズ\n",
     "dms_img[dms_img < 0] = 0\n",
     "dms_img = dms_img / dms_img.max()\n",
@@ -544,9 +564,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "同じ画像のようです。\n",
+    "同様の画像が出力されたようです。\n",
     "\n",
-    "次節以降ではこの高速なコードを使用します。"
+    "この`simple_demosaic()`関数を含んだモジュールが`raw_process.py`として[githubにアップロード](https://raw.githubusercontent.com/moizumi99/raw_process/master/raw_process.py)されています。\n",
+    "使用する場合は、\n",
+    "\n",
+    "`!wget https://raw.githubusercontent.com/moizumi99/raw_process/master/raw_process.py`\n",
+    "\n",
+    "としてダウンロードした後、\n",
+    "\n",
+    "`from raw_process import simple_demosaic`\n",
+    "\n",
+    "としてインポートしてください。"
    ]
   },
   {
