--- a/camera_raw_chapter_3_3.ipynb
+++ b/camera_raw_chapter_3_3.ipynb
@@ -28,8 +28,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -37,18 +39,7 @@
      "text": [
       "Requirement already satisfied: rawpy in /home/moiz/anaconda3/lib/python3.7/site-packages (0.13.0)\n",
       "Requirement already satisfied: numpy in /home/moiz/anaconda3/lib/python3.7/site-packages (from rawpy) (1.15.1)\n",
-      "Requirement already satisfied: imageio in /home/moiz/anaconda3/lib/python3.7/site-packages (2.4.1)\n",
-      "--2019-01-26 11:42:53--  https://raw.githubusercontent.com/moizumi99/raw_process/master/sample.ARW\n",
-      "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 151.101.188.133\n",
-      "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|151.101.188.133|:443... connected.\n",
-      "HTTP request sent, awaiting response... 200 OK\n",
-      "Length: 24746752 (24M) [application/octet-stream]\n",
-      "Saving to: ‘sample.ARW.6’\n",
-      "\n",
-      "sample.ARW.6        100%[===================>]  23.60M  51.1MB/s    in 0.5s    \n",
-      "\n",
-      "2019-01-26 11:42:54 (51.1 MB/s) - ‘sample.ARW.6’ saved [24746752/24746752]\n",
-      "\n"
+      "Requirement already satisfied: imageio in /home/moiz/anaconda3/lib/python3.7/site-packages (2.4.1)\n"
      ]
     }
    ],
@@ -63,8 +54,13 @@
     "import matplotlib.pyplot as plt\n",
     "from matplotlib.pyplot import imshow\n",
     "\n",
+    "# 前節までに作成したモジュールのダウンロード\n",
+    "!if [ ! -f raw_process.py ]; then wget https://raw.githubusercontent.com/moizumi99/raw_process/master/raw_process.py; fi\n",
+    "\n",
+    "from raw_process import simple_demosaic\n",
+    "\n",
     "# 画像をダウンロードします。\n",
-    "!wget https://raw.githubusercontent.com/moizumi99/raw_process/master/sample.ARW\n",
+    "!if [ ! -f sample.ARW ]; then wget https://raw.githubusercontent.com/moizumi99/raw_process/master/sample.ARW; fi\n",
     "\n",
     "# 自分で撮影した画像を使用する場合は以下のコメントを取り除きアップロードします。\n",
     "# from google.colab import files\n",
@@ -104,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -225,19 +221,55 @@
    "source": [
     "先程扱ったホワイトバランスの処理は、コードの読みやすさを優先したものなので低速です。\n",
     "\n",
-    "numpyの機能を利用して高速化すると次のようになります。"
+    "numpyの機能を利用して高速化した関数は次のようになります。"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "gain_matrix = np.zeros((h, w))\n",
-    "for c in (0, 1, 2, 3):\n",
-    "    gain_matrix[raw.raw_colors == c] = wb[c] / norm\n",
-    "wb_img = raw_array * gain_matrix"
+    "def white_balance(raw_array, wb_gain, raw_colors):\n",
+    "    \"\"\"\n",
+    "    ホワイトバランス補正処理を行う。\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    raw_array: numpy array\n",
+    "        入力BayerRAW画像データ。\n",
+    "    wb_gain: float[4]\n",
+    "        ホワイトバランスゲイン。\n",
+    "    raw_colors: int[h, w]\n",
+    "        RAW画像のカラーチャンネルマトリクス。\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    wb_img: numpy array\n",
+    "        出力RAW画像。\n",
+    "    \"\"\"\n",
+    "    norm = wb_gain[1]\n",
+    "    gain_matrix = np.zeros(raw_array.shape)\n",
+    "    for color in (0, 1, 2, 3):\n",
+    "        gain_matrix[raw_colors == color] = wb_gain[color] / norm\n",
+    "    wb_img = raw_array * gain_matrix\n",
+    "    return wb_img"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "この関数を使ってホワイトバランス処理を行うにはこのように書きます。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wb_img = white_balance(raw_array, raw.camera_whitebalance, raw.raw_colors)"
    ]
   },
   {
@@ -249,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -267,14 +299,7 @@
    ],
    "source": [
     "# 簡易デモザイク。\n",
-    "# 詳細は3.2節を参照\n",
-    "dms_img = np.zeros((h//2, w//2, 3))\n",
-    "bayer_pattern[bayer_pattern==3] = 1\n",
-    "dms_img[:, :, bayer_pattern[0, 0]] = wb_img[0::2, 0::2]\n",
-    "dms_img[:, :, bayer_pattern[0, 1]] += wb_img[0::2, 1::2]\n",
-    "dms_img[:, :, bayer_pattern[1, 0]] += wb_img[1::2, 0::2]\n",
-    "dms_img[:, :, bayer_pattern[1, 1]] += wb_img[1::2, 1::2]\n",
-    "dms_img[:, :, 1] /= 2\n",
+    "dms_img = simple_demosaic(wb_img, raw.raw_pattern)\n",
     "\n",
     "# 画像を0と1の間でノーマライズ\n",
     "dms_img[dms_img < 0] = 0\n",
@@ -290,6 +315,21 @@
    "metadata": {},
    "source": [
     "同様の画像が出力されたようです。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "この`white_balance()`関数は`raw_process.py`モジュールの一部としてgithubからダウンロードできます。 使用する場合は、\n",
+    "\n",
+    "`!wget https://raw.githubusercontent.com/moizumi99/raw_process/master/raw_process.py`\n",
+    "\n",
+    "としてダウンロードした後、\n",
+    "\n",
+    "`from raw_process import white_balance`\n",
+    "\n",
+    "としてインポートしてください。"
    ]
   },
   {
