--- a/camera_raw_chapter_3_4.ipynb
+++ b/camera_raw_chapter_3_4.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -38,29 +38,14 @@
      "text": [
       "Requirement already satisfied: rawpy in /home/moiz/anaconda3/lib/python3.7/site-packages (0.13.0)\n",
       "Requirement already satisfied: numpy in /home/moiz/anaconda3/lib/python3.7/site-packages (from rawpy) (1.15.1)\n",
-      "\u001b[33mYou are using pip version 18.1, however version 19.0.1 is available.\n",
-      "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n",
-      "Requirement already satisfied: imageio in /home/moiz/anaconda3/lib/python3.7/site-packages (2.4.1)\n",
-      "\u001b[33mYou are using pip version 18.1, however version 19.0.1 is available.\n",
-      "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n",
-      "--2019-01-26 14:02:40--  https://raw.githubusercontent.com/moizumi99/raw_process/master/sample.ARW\n",
-      "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 151.101.188.133\n",
-      "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|151.101.188.133|:443... connected.\n",
-      "HTTP request sent, awaiting response... 200 OK\n",
-      "Length: 24746752 (24M) [application/octet-stream]\n",
-      "Saving to: ‘sample.ARW.1’\n",
-      "\n",
-      "sample.ARW.1        100%[===================>]  23.60M  51.9MB/s    in 0.5s    \n",
-      "\n",
-      "2019-01-26 14:02:41 (51.9 MB/s) - ‘sample.ARW.1’ saved [24746752/24746752]\n",
-      "\n"
+      "Requirement already satisfied: imageio in /home/moiz/anaconda3/lib/python3.7/site-packages (2.4.1)\n"
      ]
     }
    ],
    "source": [
     "# rawpyとimageioのインストール\n",
-    "!pip install rawpy\n",
-    "!pip install imageio\n",
+    "!pip install rawpy;\n",
+    "!pip install imageio;\n",
     "\n",
     "# rawpy, imageio, numpuy, pyplot, imshowのインポート\n",
     "import rawpy, imageio\n",
@@ -68,8 +53,13 @@
     "import matplotlib.pyplot as plt\n",
     "from matplotlib.pyplot import imshow\n",
     "\n",
+    "# 前節までに作成したモジュールのダウンロード\n",
+    "!if [ ! -f raw_process.py ]; then wget https://raw.githubusercontent.com/moizumi99/raw_process/master/raw_process.py; fi\n",
+    "\n",
+    "from raw_process import simple_demosaic, white_balance\n",
+    "\n",
     "# 画像をダウンロードします。\n",
-    "!wget https://raw.githubusercontent.com/moizumi99/raw_process/master/sample.ARW\n",
+    "!if [ ! -f sample.ARW ]; then wget https://raw.githubusercontent.com/moizumi99/raw_process/master/sample.ARW; fi\n",
     "\n",
     "# 自分で撮影した画像を使用する場合は以下のコメントを取り除きアップロードします。\n",
     "# from google.colab import files\n",
@@ -81,72 +71,7 @@
     "raw = rawpy.imread(raw_file)\n",
     "raw_array = raw.raw_image\n",
     "h, w = raw.sizes.raw_height, raw.sizes.raw_width\n",
-    "raw_array = raw_array.reshape((h, w))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def simple_demosaic(raw_array, bayer_pattern):\n",
-    "    \"\"\"\n",
-    "    簡易デモザイク処理を行う。\n",
-    "    \n",
-    "    Parameters\n",
-    "    ----------\n",
-    "    raw_array: numpy array\n",
-    "        入力BayerRAW画像データ\n",
-    "    bayer_pattern: int[2, 2]\n",
-    "        ベイヤーパターン。0:赤、1:緑、2:青、3:緑。\n",
-    "    \n",
-    "    Returns\n",
-    "    -------\n",
-    "    dms_img: numpy array\n",
-    "        出力RGB画像。サイズは入力の縦横共に1/2。\n",
-    "    \"\"\"\n",
-    "    h, w = raw_array.shape\n",
-    "    dms_img = np.zeros((h//2, w//2, 3))\n",
-    "    bayer_pattern[bayer_pattern==3] = 1\n",
-    "    dms_img[:, :, bayer_pattern[0, 0]] = wb_img[0::2, 0::2]\n",
-    "    dms_img[:, :, bayer_pattern[0, 1]] += wb_img[0::2, 1::2]\n",
-    "    dms_img[:, :, bayer_pattern[1, 0]] += wb_img[1::2, 0::2]\n",
-    "    dms_img[:, :, bayer_pattern[1, 1]] += wb_img[1::2, 1::2]\n",
-    "    dms_img[:, :, 1] /= 2\n",
-    "    return dms_img"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def white_balance(raw_array, wb, raw_colors):\n",
-    "    \"\"\" \n",
-    "    ホワイトバランス補正処理を行う。\n",
-    "    \n",
-    "    Parameters\n",
-    "    ----------\n",
-    "    raw_array: numpy array\n",
-    "        入力BayerRAW画像データ。\n",
-    "    wbg: float[4]\n",
-    "        ホワイトバランスゲイン。\n",
-    "    raw_colors: int[h, w]\n",
-    "        RAW画像のカラーチャンネルマトリクス。\n",
-    "        \n",
-    "    Returns\n",
-    "    -------\n",
-    "    wb_img: numpy array\n",
-    "        出力RAW画像。\n",
-    "    \"\"\"\n",
-    "    norm = wb[1]\n",
-    "    gain_matrix = np.zeros(raw_array.shape)\n",
-    "    for c in (0, 1, 2, 3):\n",
-    "        gain_matrix[raw_colors == c] = wb[c] / norm\n",
-    "    wb_img = raw_array * gain_matrix\n",
-    "    return wb_img"
+    "raw_array = raw_array.reshape((h, w));"
    ]
   },
   {
@@ -175,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -338,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -374,12 +299,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "簡易でモザイク処理を行って確認しましょう。"
+    "簡易デモザイク処理を行って確認しましょう。"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -396,6 +321,7 @@
     }
    ],
    "source": [
+    "# 上記のblack_level_correction関数を使用してブラックレベル補正。\n",
     "blc_raw = black_level_correction(raw_array, blc, raw.raw_pattern)\n",
     "# 最初に定義したwhite_balance()関数を使って、ホワイトバランス調整。\n",
     "wb_img = white_balance(blc_raw, raw.camera_whitebalance, raw.raw_colors)\n",
@@ -418,14 +344,14 @@
    "source": [
     "同様の画像が出力されたようです。\n",
     "\n",
-    "このblack_level_correction()関数はraw_process.pyモジュールの一部としてgithubからダウンロードできます。\n",
+    "この`black_level_correction()`関数は`raw_process.py`モジュールの一部として[githubにアップロード](https://raw.githubusercontent.com/moizumi99/raw_process/master/raw_process.py)されています。\n",
     "使用する場合は、\n",
     "\n",
     "`!wget https://raw.githubusercontent.com/moizumi99/raw_process/master/raw_process.py`\n",
     "\n",
     "としてダウンロードした後、\n",
     "\n",
-    "`from raw_process import *`\n",
+    "`from raw_process import black_level_correction`\n",
     "\n",
     "としてインポートしてください。"
    ]
@@ -438,6 +364,13 @@
     "\n",
     "この節ではホワイトバランスの調整を行いました。次はブラックレベル補正を行い、色再現を向上します。"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
