chart.jpg, camera_raw_chapter_4, 4_2 are added.

--- a/camera_raw_chapter_3_2.ipynb
+++ b/camera_raw_chapter_3_2.ipynb
@@ -18,7 +18,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "この節では、RAWデータの簡易でモザイク処理を行い、画像をフルカラーで表示してみます。"
+    "この節では、RAWデータの簡易でモザイク処理を行い、画像をフルカラーで表示してみます。\n",
+    "\n",
+    "この節のの内容はColabノートブックとして公開してあります。ノートブックを見るには[目次ページ](https://colab.research.google.com/github/moizumi99/camera_raw_processing/blob/master/camera_raw_toc.ipynb)から参照するか、以下のリンクを使ってアクセスしてください。\n",
+    "\n",
+    "https://colab.research.google.com/github/moizumi99/camera_raw_processing/blob/master/camera_raw_chapter_3_2.ipynb"
    ]
   },
   {
@@ -76,7 +80,7 @@
     "from matplotlib.pyplot import imshow\n",
     "\n",
     "# 画像をダウンロードします。\n",
-    "!wget https://raw.githubusercontent.com/moizumi99/raw_process/master/sample.ARW\n",
+    "!if [ ! -f sample.ARW ]; then wget https://raw.githubusercontent.com/moizumi99/camera_raw_process/master/sample.ARW; fi\n",
     "\n",
     "# 自分で撮影した画像を使用する場合は以下のコメントを取り除きアップロードします。\n",
     "# from google.colab import files\n",
@@ -589,7 +593,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "RAW画像に対して簡易デモザイク処理を行いました。"
+    "RAW画像に対して簡易デモザイク処理を行いました。次は[ホワイトバランス補正](https://colab.research.google.com/github/moizumi99/camera_raw_processing/blob/master/camera_raw_chapter_3_2.ipynb)を行います。"
    ]
   }
  ],
