--- a/camera_raw_chapter_3_4.ipynb
+++ b/camera_raw_chapter_3_4.ipynb
@@ -13,7 +13,11 @@
    "source": [
     "## この節について\n",
     "\n",
-    "この節では、ブラックレベル補正を行い画像の色を修正します。"
+    "この節では、ブラックレベル補正を行い画像の明るさと色を修正します。\n",
+    "\n",
+    "この節のの内容はColabノートブックとして公開してあります。ノートブックを見るには[目次ページ](https://colab.research.google.com/github/moizumi99/camera_raw_processing/blob/master/camera_raw_toc.ipynb)から参照するか、以下のリンクを使ってアクセスしてください。\n",
+    "\n",
+    "https://colab.research.google.com/github/moizumi99/camera_raw_processing/blob/master/camera_raw_chapter_3_4.ipynb"
    ]
   },
   {
@@ -23,7 +27,6 @@
     "## 準備\n",
     "\n",
     "まず3.1節で行ったライブラリーのインストールと、モジュールのインポート、画像のダウンロード、及びRAW画像の読み込みを行います。\n",
-    "また、3.2節の簡易デモザイク、3.3節のホワイトバランス処理を関数として定義しておきます。\n",
     "内容については各節を参照ください。"
    ]
   },
@@ -54,12 +57,12 @@
     "from matplotlib.pyplot import imshow\n",
     "\n",
     "# 前節までに作成したモジュールのダウンロード\n",
-    "!if [ ! -f raw_process.py ]; then wget https://raw.githubusercontent.com/moizumi99/raw_process/master/raw_process.py; fi\n",
+    "!if [ ! -f raw_process.py ]; then wget https://raw.githubusercontent.com/moizumi99/camera_raw_process/master/raw_process.py; fi\n",
     "\n",
     "from raw_process import simple_demosaic, white_balance\n",
     "\n",
     "# 画像をダウンロードします。\n",
-    "!if [ ! -f sample.ARW ]; then wget https://raw.githubusercontent.com/moizumi99/raw_process/master/sample.ARW; fi\n",
+    "!if [ ! -f sample.ARW ]; then wget https://raw.githubusercontent.com/moizumi99/camera_raw_process/master/sample.ARW; fi\n",
     "\n",
     "# 自分で撮影した画像を使用する場合は以下のコメントを取り除きアップロードします。\n",
     "# from google.colab import files\n",
@@ -362,15 +365,8 @@
    "source": [
     "## まとめ\n",
     "\n",
-    "この節ではホワイトバランスの調整を行いました。次はブラックレベル補正を行い、色再現を向上します。"
+    "この節ではブラックレベル補正を行いました。次は[ガンマ補正](https://colab.research.google.com/github/moizumi99/camera_raw_processing/blob/master/camera_raw_chapter_3_5.ipynb)を行い、明るさとトーンを補正します。"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
