--- a/camera_raw_chapter_3_1.ipynb
+++ b/camera_raw_chapter_3_1.ipynb
@@ -112,7 +112,7 @@
     }
    ],
    "source": [
-    "!wget https://raw.githubusercontent.com/moizumi99/raw_process/master/sample.ARW"
+    "!if [ ! -f sample.ARW ]; then wget https://raw.githubusercontent.com/moizumi99/camera_raw_process/master/sample.ARW; fi\n"
    ]
   },
   {
@@ -522,17 +522,10 @@
     "id": "jeKk14nlOeLa"
    },
    "source": [
-    "## この節のまとめ"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "6tC_sDm0Ohpn"
-   },
-   "source": [
-    "必用なモジュールをインポートしてRAW画像をcolab上に読み込みました。"
+    "## この節のまとめ\n",
+    "\n",
+    "必用なモジュールをインポートしてRAW画像をcolab上に読み込みました。\n",
+    "次は[簡易デモザイク処理](https://colab.research.google.com/github/moizumi99/camera_raw_processing/blob/master/camera_raw_chapter_3_2.ipynb)を行います。"
    ]
   }
  ],
