--- a/camera_raw_chapter_3_3.ipynb
+++ b/camera_raw_chapter_3_3.ipynb
@@ -13,7 +13,11 @@
    "source": [
     "## この節について\n",
     "\n",
-    "この節では、ホワイトバランス補正を行い画像の色を修正します。"
+    "この節では、ホワイトバランス補正を行い画像の色を修正します。\n",
+    "\n",
+    "この節のの内容はColabノートブックとして公開してあります。ノートブックを見るには[目次ページ](https://colab.research.google.com/github/moizumi99/camera_raw_processing/blob/master/camera_raw_toc.ipynb)から参照するか、以下のリンクを使ってアクセスしてください。\n",
+    "\n",
+    "https://colab.research.google.com/github/moizumi99/camera_raw_processing/blob/master/camera_raw_chapter_3_3.ipynb"
    ]
   },
   {
@@ -55,12 +59,12 @@
     "from matplotlib.pyplot import imshow\n",
     "\n",
     "# 前節までに作成したモジュールのダウンロード\n",
-    "!if [ ! -f raw_process.py ]; then wget https://raw.githubusercontent.com/moizumi99/raw_process/master/raw_process.py; fi\n",
+    "!if [ ! -f raw_process.py ]; then wget https://raw.githubusercontent.com/moizumi99/camera_raw_process/master/raw_process.py; fi\n",
     "\n",
     "from raw_process import simple_demosaic\n",
     "\n",
     "# 画像をダウンロードします。\n",
-    "!if [ ! -f sample.ARW ]; then wget https://raw.githubusercontent.com/moizumi99/raw_process/master/sample.ARW; fi\n",
+    "!if [ ! -f sample.ARW ]; then wget https://raw.githubusercontent.com/moizumi99/camera_raw_process/master/sample.ARW; fi\n",
     "\n",
     "# 自分で撮影した画像を使用する場合は以下のコメントを取り除きアップロードします。\n",
     "# from google.colab import files\n",
@@ -336,9 +340,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## まとめ\n",
+    "## この節のまとめ\n",
     "\n",
-    "この節ではホワイトバランスの調整を行いました。次はブラックレベル補正を行い、色再現を向上します。"
+    "この節ではホワイトバランスの調整を行いました。次は[ブラックレベル補正](https://colab.research.google.com/github/moizumi99/camera_raw_processing/blob/master/camera_raw_chapter_3_4.ipynb)を行い、色再現を向上します。"
    ]
   }
  ],
