--- a/camera_raw_chapter_1.ipynb
+++ b/camera_raw_chapter_1.ipynb
@@ -31,9 +31,9 @@
     "\n",
     "そのために、解説する処理は最重要なものにしぼり、使用するアルゴリズムは一部の例外（デモザイク）を除き、もっとも簡単なものを選びました<sup name=\"footnote1\">[1]</sup>。\n",
     "\n",
-    "またすべての処理はGoogle Colab上で行うことができ、読者の皆さんはパワフルなPCや特殊なソフトウェアをよういせずとも、ブラウザ上で全ての処理を試してみることができます。\n",
-    "  \n",
-    "記事の最後ではラズベリーパイのカメラで撮影したRAW画像からこんなRGB画像が作れるようになります。"
+    "記事の最後ではラズベリーパイのカメラで撮影したRAW画像からこんなRGB画像が作れるようになります。\n",
+    "\n",
+    "(TODO: 画像を入れる)"
    ]
   },
   {
@@ -43,7 +43,9 @@
     "id": "XCSHEbH9DWKw"
    },
    "source": [
-    "(TODO: 画像を入れる)"
+    "またすべての処理はGoogle Colab上で行うことができ、読者の皆さんはパワフルなPCや特殊なソフトウェアをよういせずとも、ブラウザ上で全ての処理を試してみることができます。\n",
+    "  \n",
+    "全てのコードへのリンクはこちらの[目次ページ](https://colab.research.google.com/github/moizumi99/camera_raw_processing/blob/master/camera_raw_toc.ipynb)からたどることができます。"
    ]
   },
   {
@@ -205,6 +207,15 @@
     "- PC上で実行できるPerl環境（ExifToolの実行に必用)\n",
     "\n",
     "- [exiftool](https://www.sno.phy.queensu.ca/~phil/exiftool/)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 次の章\n",
+    "\n",
+    "次は[カメラ画像処理について](https://colab.research.google.com/github/moizumi99/camera_raw_processing/blob/master/camera_raw_chapter_3_1pynb)簡単に解説します。"
    ]
   }
  ],
